ideal-angular/src/app/auth/login/login.component.css
main {
  height: 100%;
  font-size: 14px !important;
}

img {
  width: 50rem;
  height: 50rem;
}

mat-form-field {
  width: 100%;
  margin-bottom: 1rem;
}

form {
  width: 35rem;
  margin: auto;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.center {
  display: flex;
  align-items: center;
}

mat-spinner {
  margin: auto;
}

p {
  color: red;
}

#video {
  display: flex;
  justify-content: center;
}

